--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="w3l-about w3l-testimonial">
 			<div class="container">
 				<div class="w3ls-heading">
-					<h3>Testimonial</h3>
+					<h3>Wishes && Feedback</h3>
 				</div>
 				<div class="w3-agile-testimonial">
 					<div class="slider">
@@ -429,9 +429,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										<div class="clearfix"> </div>
 									</div>
 									<div class="testimonial-img-info">
-										<p><i class="fa fa-quote-left" aria-hidden="true"></i> Aenean tincidunt lectus id ipsum congue egestas. Pellentesque a molestie dui, vitae tincidunt odio. Morbi nisi sapien, tincidunt et porttitor ac, tempor vitae orci. In ipsum leo, molestie ut lacus in, consequat efficitur metus. Suspendisse porttitor nulla arcu, eget iaculis nibh lobortis in. Duis egestas placerat massa, sit amet mattis dui pretium id. <i class="fa fa-quote-right" aria-hidden="true"></i></p>
-										<h5>Peter Guptill</h5>
-										<h6>Proin blandit</h6>
+										<p><i class="fa fa-quote-left" aria-hidden="true"></i>Happy to hear about your new business.wish all success.<i class="fa fa-quote-right" aria-hidden="true"></i></p>
+										<h5>Yathi M</h5>
+										<h6>Saudi Arabia</h6>
 									</div>
 								</li>
 								<li>
@@ -448,9 +448,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										<div class="clearfix"> </div>
 									</div>
 									<div class="testimonial-img-info">
-										<p><i class="fa fa-quote-left" aria-hidden="true"></i> Sed accumsan nisl ut ex fermentum, eget sodales eros elementum. Curabitur dapibus placerat quam in vehicula. Morbi fermentum sodales varius. Sed mauris massa, sodales in lectus non, tempus pellentesque quam. Phasellus lobortis magna ante, eget finibus magna tristique a. Integer sagittis convallis rhoncus. Sed imperdiet augue sit amet enim accumsan <i class="fa fa-quote-right" aria-hidden="true"></i></p>
-										<h5>Mary Jane</h5>
-										<h6>Lorem ipsum</h6>
+										<p><i class="fa fa-quote-left" aria-hidden="true"></i> Happy to hear about your new business safar travel desk. wish all sucess <i class="fa fa-quote-right" aria-hidden="true"></i></p>
+										<h5>Yathi M</h5>
+										<h6>Saudi Arabia</h6>
 									</div>
 								</li>
 								<li>
@@ -467,9 +467,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										<div class="clearfix"> </div>
 									</div>
 									<div class="testimonial-img-info">
-										<p><i class="fa fa-quote-left" aria-hidden="true"></i> unc ornare a quam et tincidunt. Aliquam et magna id lectus egestas sollicitudin. Quisque sed rhoncus magna. Morbi a orci mi. Suspendisse potenti. Integer in augue turpis. Aenean massa dolor, feugiat et tortor vitae, tempor fringilla odio. Quisque at arcu ullamcorper, ullamcorper quam et, egestas nisi. Mauris aliquam hendrerit consequat. <i class="fa fa-quote-right" aria-hidden="true"></i></p>
-										<h5>Steven Wilson</h5>
-										<h6>Proin blandit</h6>
+										<p><i class="fa fa-quote-left" aria-hidden="true"></i> Happy to hear about your new business safar travel desk. wish all sucess <i class="fa fa-quote-right" aria-hidden="true"></i></p>
+										<h5>Yathi M</h5>
+										<h6>Saudi Arabia</h6>
 									</div>
 								</li>
 							</ul>
@@ -518,10 +518,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 						</div>
 						<div class="col-sm-8 agile-news-img-info">
-							<h5><a href="#" data-toggle="modal" data-target="#myModal">Lorem ipsum dolor</a></h5>
+							<h5><a href="#" data-toggle="modal" data-target="#myModal">Grand opening</a></h5>
 							<div class="agileits-w3layouts-border"> </div>
-							<p>Sed accumsan nisl ut ex fermentum, eget sodales eros elementum. Curabitur dapibus placerat quam in vehicula. Morbi fermentum sodales varius.</p>
-							<h6><i class="fa fa-calendar" aria-hidden="true"></i> 24th Dec,2016</h6>
+							<p>The grand opening of new office at thiruvambady,calicut,kerala.The opening will be at the end of july 2017.</p>
+							<h6><i class="fa fa-calendar" aria-hidden="true"></i> 05th July,2017</h6>
 						</div>
 						<div class="clearfix"> </div>
 					</div>
@@ -530,10 +530,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 						</div>
 						<div class="col-sm-8 agile-news-img-info">
-							<h5><a href="#" data-toggle="modal" data-target="#myModal">Lorem ipsum dolor</a></h5>
+							<h5><a href="#" data-toggle="modal" data-target="#myModal">Lounge of new offers</a></h5>
 							<div class="agileits-w3layouts-border"> </div>
-							<p>Nunc ornare a quam et tincidunt. Aliquam et magna id lectus egestas sollicitudin. Quisque sed rhoncus magna. Morbi a orci mi.</p>
-							<h6><i class="fa fa-calendar" aria-hidden="true"></i> 24th Dec,2016</h6>
+							<p>The safar travel desk announce they will lounge new offres as part of inaguration.and publish more details about inaguration soon..</p>
+							<h6><i class="fa fa-calendar" aria-hidden="true"></i> 05th July,2017</h6>
 						</div>
 						<div class="clearfix"> </div>
 					</div>
@@ -564,102 +564,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- //modal -->
 
 	<!-- team -->
-	<div class="team">
-		<div class="w3-team-top">
-			<h3>T</h3>
-		</div>
-		<div class="w3l-about w3l-team">
-			<div class="container">
-				<div class="w3ls-heading">
-					<h3>Team</h3>
-				</div>
-				<div class="agile-team-grids">
-					<div class="col-sm-3 team-grid">
-						<div class="flip-container">
-							<div class="flipper">
-								<div class="front">
-									<img src="images/t1.jpg" alt="" />
-								</div>
-								<div class="back">
-									<h4>Peter Parker</h4>
-									<p>Vestibulum </p>
-									<div class="w3l-social">
-										<ul>
-											<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-											<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-											<li><a href="#"><i class="fa fa-rss"></i></a></li>
-										</ul>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-3 team-grid">
-						<div class="flip-container">
-							<div class="flipper">
-								<div class="front">
-									<img src="images/t2.jpg" alt="" />
-								</div>
-								<div class="back">
-									<h4>Steven Wilson</h4>
-									<p>Quisque vitae</p>
-									<div class="w3l-social">
-										<ul>
-											<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-											<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-											<li><a href="#"><i class="fa fa-rss"></i></a></li>
-										</ul>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-3 team-grid">
-						<div class="flip-container">
-							<div class="flipper">
-								<div class="front">
-									<img src="images/t3.jpg" alt="" />
-								</div>
-								<div class="back">
-									<h4>Johan Botha</h4>
-									<p>Nulla molestie</p>
-									<div class="w3l-social">
-										<ul>
-											<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-											<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-											<li><a href="#"><i class="fa fa-rss"></i></a></li>
-										</ul>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-3 team-grid">
-						<div class="flip-container">
-							<div class="flipper">
-								<div class="front">
-									<img src="images/t4.jpg" alt="" />
-								</div>
-								<div class="back">
-									<h4>Mary Jane</h4>
-									<p>Aliquam non</p>
-									<div class="w3l-social">
-										<ul>
-											<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-											<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-											<li><a href="#"><i class="fa fa-rss"></i></a></li>
-										</ul>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="clearfix"> </div>
-				</div>
-
-			</div>
-		</div>
-	</div>
 	<!-- //team -->
 	<!-- subscribe -->
 	<div class="subscribe">
@@ -674,16 +578,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="w3-agile-subscribe">
 					<p>Subscribe to our email newsletter free useful updates everyday in your mailbox</p>
 					<form action="#" method="post">
-						<input type="email" id="mc4wp_email" name="EMAIL" placeholder="Enter your email here" required="">
-						<input type="submit" value="Subscribe">
+						<input type="email" id="mc4wp_email" name="EMAIL" placeholder="Enter your email here" required="" readonly>
+						<input type="submit" value="Subscribe" data-toggle="tooltip" data-placement="top" title="Coming soon!">
 					</form>
 					<h5>OR</h5>
 					<div class="agileinfo-social-grids">
 						<ul>
-							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-							<li><a href="#"><i class="fa fa-rss"></i></a></li>
-							<li><a href="#"><i class="fa fa-vk"></i></a></li>
+							<li><a href="#"><i class="fa fa-facebook" data-toggle="tooltip" data-placement="top" title="Coming soon!"></i></a></li>
+							<li><a href="#"><i class="fa fa-twitter" data-toggle="tooltip" data-placement="top" title="Coming soon!"></i></a></li>
+							<li><a href="#"><i class="fa fa-rss" data-toggle="tooltip" data-placement="top" title="Coming soon!"></i></a></li>
+							<li><a href="#"><i class="fa fa-vk" data-toggle="tooltip" data-placement="top" title="Coming soon!"></i></a></li>
 						</ul>
 					</div>
 				</div>
@@ -715,7 +619,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</div>
 							<div class="col-md-10 w3-agile-address-right">
 								<h5>Visit Us</h5>
-								<p>123 Fourth Avenue, Seattle Wa 98104, Los Angeles </p>
+								<p>Thiruvambady,calicut,kerala,india </p>
 							</div>
 							<div class="clearfix"> </div>
 						</div>
@@ -725,7 +629,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</div>
 							<div class="col-md-10 w3-agile-address-right">
 								<h5>Mail Us</h5>
-								<p><a href="mailto:info@example.com"> mail@example.com</a></p>
+								<p><a href="mailto:info@example.com"> contact@safartravels.com</a></p>
 							</div>
 							<div class="clearfix"> </div>
 						</div>
@@ -735,19 +639,19 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</div>
 							<div class="col-md-10 w3-agile-address-right">
 								<h5>Call Us</h5>
-								<p>+11 222 333 4444</p>
+								<p>+918075364655</p>
 							</div>
 							<div class="clearfix"> </div>
 						</div>
 					</div>
 					<div class="col-md-7 contact-form">
 						<form action="#" method="post">
-							<input type="text" name="First Name" placeholder="First Name" required="">
-							<input class="email" name="Last Name" type="text" placeholder="Last Name" required="">
-							<input type="text" name="Number" placeholder="Mobile Number" required="">
-							<input class="email" name="Email" type="email" placeholder="Email" required="">
-							<textarea name="Message" placeholder="Message" required=""></textarea>
-							<input type="submit" value="SUBMIT">
+							<input type="text" name="First Name" placeholder="First Name" required="" readonly="">
+							<input class="email" name="Last Name" type="text" placeholder="Last Name" required="" readonly="">
+							<input type="text" name="Number" placeholder="Mobile Number" required="" readonly="">
+							<input class="email" name="Email" type="email" placeholder="Email" required="" readonly="">
+							<textarea name="Message" placeholder="Message" required="" readonly=""></textarea>
+							<input type="submit" value="SUBMIT" data-toggle="tooltip" data-placement="top" title="Coming soon!">
 						</form>
 					</div>
 					<div class="clearfix"> </div>
