--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<p>We provide Hajj && Umrah services, Visa services, Tour packages and various public services</p>
 					<div class="w3ls-about-grids">
 						<div class="col-md-3 w3ls-about-grid">
-							<img src="images/a1.jpg" alt="" />
+							<img src="images/h1.jpg" alt="" />
 						</div>
 						<div class="col-md-3 w3ls-about-grid">
 							<img src="images/a2.jpg" alt="" />
@@ -218,32 +218,32 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="col-md-4 agileits-services-grid">
 						<i class="fa fa-bus" aria-hidden="true"></i>
 						<h4>Hajj && Umrah</h4>
-						<p>Nullam maximus consequat bibendum. Integer euismod in orci quis tempus. Nunc sed ligula facilisis</p>
+						<p>We provide Hajj and umrah services.</p>
 					</div>
 					<div class="col-md-4 agileits-services-grid">
 						<i class="fa fa-credit-card" aria-hidden="true"></i>
 						<h4>Flight Tickets</h4>
-						<p>Nullam maximus consequat bibendum. Integer euismod in orci quis tempus. Nunc sed ligula facilisis</p>
+						<p>Domestic and international flight ticket instantaneously</p>
 					</div>
 					<div class="col-md-4 agileits-services-grid">
 						<i class="fa fa-gift" aria-hidden="true"></i>
 						<h4>Visa services</h4>
-						<p>Nullam maximus consequat bibendum. Integer euismod in orci quis tempus. Nunc sed ligula facilisis</p>
+						<p>Provide visa for various countries.</p>
 					</div>
 					<div class="col-md-4 agileits-services-grid">
 						<i class="fa fa-plane" aria-hidden="true"></i>
 						<h4>Passport</h4>
-						<p>Nullam maximus consequat bibendum. Integer euismod in orci quis tempus. Nunc sed ligula facilisis</p>
+						<p>Indian passport assistance</p>
 					</div>
 					<div class="col-md-4 agileits-services-grid">
 						<i class="fa fa-subway" aria-hidden="true"></i>
 						<h4>Tour packages</h4>
-						<p>Nullam maximus consequat bibendum. Integer euismod in orci quis tempus. Nunc sed ligula facilisis</p>
+						<p>Tour packages to various countries and all over india.</p>
 					</div>
 					<div class="col-md-4 agileits-services-grid">
 						<i class="fa fa-ship" aria-hidden="true"></i>
 						<h4>Public services</h4>
-						<p>Nullam maximus consequat bibendum. Integer euismod in orci quis tempus. Nunc sed ligula facilisis</p>
+						<p>We also provide assistance in various public services.</p>
 					</div>
 					<div class="clearfix"> </div>
 				</div>
@@ -418,13 +418,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<li>
 									<div class="testimonial-img-grid">
 										<div class="testimonial-img t-img1">
-											<img src="images/ts1.jpg" alt="" />
+											<img src="images/prof1.jpg" alt="" />
 										</div>
 										<div class="testimonial-img">
-											<img src="images/ts2.jpg" alt="" />
+											<img src="images/prof2.png" alt="" />
 										</div>
 										<div class="testimonial-img t-img2">
-											<img src="images/ts3.jpg" alt="" />
+											<img src="images/prof3.png" alt="" />
 										</div>
 										<div class="clearfix"> </div>
 									</div>
@@ -437,13 +437,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<li>
 									<div class="testimonial-img-grid">
 										<div class="testimonial-img t-img1">
-											<img src="images/ts2.jpg" alt="" />
+											<img src="images/prof1.jpg" alt="" />
 										</div>
 										<div class="testimonial-img">
-											<img src="images/ts3.jpg" alt="" />
+											<img src="images/prof2.png" alt="" />
 										</div>
 										<div class="testimonial-img t-img2">
-											<img src="images/ts1.jpg" alt="" />
+											<img src="images/prof3.png" alt="" />
 										</div>
 										<div class="clearfix"> </div>
 									</div>
@@ -456,13 +456,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<li>
 									<div class="testimonial-img-grid">
 										<div class="testimonial-img t-img1">
-											<img src="images/ts3.jpg" alt="" />
+											<img src="images/prof1.jpg" alt="" />
 										</div>
 										<div class="testimonial-img">
-											<img src="images/ts1.jpg" alt="" />
+											<img src="images/prof2.png" alt="" />
 										</div>
 										<div class="testimonial-img t-img2">
-											<img src="images/ts2.jpg" alt="" />
+											<img src="images/prof3.png" alt="" />
 										</div>
 										<div class="clearfix"> </div>
 									</div>
